# MMLauncher

./: CMakeLists.txt  README.md  installer.gresource.xml  mmlauncher.gresource.xml  uninstall
installer/: CMakeLists.txt  gen_launcher_info.cmake  installer.gresource.xml  launcher_info.h.in
installer/src/: installerapp.c  installerapp.h  installerappwin.c  installerappwin.h  main.c
launcher/: CMakeLists.txt  launcher.gresource.xml
launcher/src/: launcherapp.c  launcherapp.h  launcherappwin.c  launcherappwin.h  main.c
res/layout/: installer.ui  installer.ui~  launcher.ui  launcher.ui~  welcome.ui  welcome.ui~
res/texts/: mmlauncher.desktop
src/: app.c  installerapp.c  installerapp.h  installerappwin.c  installerappwin.h  launcher.c  launcher.h  launcherwin.c  launcherwin.h  main.c
